--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -72,7 +72,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="{{url_for('business.get_business')}}">
+        <a class="nav-link" href="{{url_for('agent.get_business')}}">
           <i class="fas fa-fw fa-user"></i>
           <span>Agents</span></a>
       </li>
