--- a/dashboard/templates/agent.html
+++ b/dashboard/templates/agent.html
@@ -66,7 +66,7 @@
                     </button>
                   </div>
                   <div class="modal-body">
-                    <form action="{{url_for('business.edit_busines', IdBusines = item.IdBusines)}}" method="POST">
+                    <form action="{{url_for('agent.edit_agent', IdBusines = item.IdBusines)}}" method="POST">
                       <div class="form-row">
                         <div class="form-group col-md-6">
                           <label for="inputEmail4">First name :</label>
@@ -119,7 +119,7 @@
                   <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
                     <a class="btn btn-primary"
-                      href="{{url_for('business.delete_business', IdBusines = item.IdBusines)}}">Delete</a>
+                      href="{{url_for('agent.delete_agent', IdBusines = item.IdBusines)}}">Delete</a>
                   </div>
                 </div>
               </div>
@@ -151,7 +151,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <form action="{{url_for('business.add_business')}}" method="POST">
+        <form action="{{url_for('agent.add_agent')}}" method="POST">
           <div class="form-row">
             <div class="form-group col-md-6">
               <label for="inputEmail4">First name :</label>
