--- a/dashboard/templates/agent.html
+++ b/dashboard/templates/agent.html
@@ -36,7 +36,7 @@
           <tbody>
             {% for item in AgentItems %}
             <tr>
-              <td>{{ item.IdBusines }}</td>
+              <td>{{ item.IdAgent }}</td>
               <td>{{ item.FirstName }}</td>
               <td>{{ item.LastName }}</td>
               <td>{{ item.Email }}</td>
@@ -47,15 +47,15 @@
               <td>{{ item.CreatedAt }}</td>
               <td>
                 <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
-                  data-target="#editModal{{ item.IdBusines }}"><i class="fas fa-edit fa-sm text-white-50"></i>
+                  data-target="#editModal{{ item.IdAgent }}"><i class="fas fa-edit fa-sm text-white-50"></i>
                   Edit </a>
                 <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
-                  data-target="#deleteModal{{ item.IdBusines }}"><i class="fas fa-trash-alt fa-sm text-white-50"></i>
+                  data-target="#deleteModal{{ item.IdAgent }}"><i class="fas fa-trash-alt fa-sm text-white-50"></i>
                   Delete </a>
               </td>
             </tr>
             <!-- edit Modal-->
-            <div class="modal fade" id="editModal{{ item.IdBusines }}" tabindex="-1" role="dialog"
+            <div class="modal fade" id="editModal{{ item.IdAgent }}" tabindex="-1" role="dialog"
               aria-labelledby="exampleModalLabel" aria-hidden="true">
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -66,7 +66,7 @@
                     </button>
                   </div>
                   <div class="modal-body">
-                    <form action="{{url_for('agent.edit_agent', IdBusines = item.IdBusines)}}" method="POST">
+                    <form action="{{url_for('agent.edit_agent', IdAgent = item.IdAgent)}}" method="POST">
                       <div class="form-row">
                         <div class="form-group col-md-6">
                           <label for="inputEmail4">First name :</label>
@@ -105,21 +105,21 @@
             </div>
 
             <!-- delete Modal-->
-            <div class="modal fade" id="deleteModal{{ item.IdBusines }}" tabindex="-1" role="dialog"
+            <div class="modal fade" id="deleteModal{{ item.IdAgent }}" tabindex="-1" role="dialog"
               aria-labelledby="exampleModalLabel" aria-hidden="true">
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Delete Business</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Delete Agent</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">×</span>
                     </button>
                   </div>
-                  <div class="modal-body">Are you sure you want to delete {{ item.BusinesName }} ?</div>
+                  <div class="modal-body">Are you sure you want to delete {{ item.FirstName }} ?</div>
                   <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
                     <a class="btn btn-primary"
-                      href="{{url_for('agent.delete_agent', IdBusines = item.IdBusines)}}">Delete</a>
+                      href="{{url_for('agent.delete_agent', IdAgent = item.IdAgent)}}">Delete</a>
                   </div>
                 </div>
               </div>
@@ -163,10 +163,8 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="inputAddress">Service :</label>
-            <select class="form-control" id="exampleFormControlSelect1" name="OrderStatus">
-              <option value=""></option>
-            </select>
+            <label for="inputAddress">Password :</label>
+            <input type="password" class="form-control" id="inputPassword4" placeholder="Password" name="Password">
           </div>
           <div class="form-group">
             <label for="inputAddress2">Phone number :</label>
@@ -175,6 +173,14 @@
           <div class="form-group">
             <label for="inputAddress2">Address :</label>
             <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor" name="BusinesName">
+          </div>
+          <div class="form-group">
+            <label for="inputAddress">Service :</label>
+            <select class="form-control" id="exampleFormControlSelect1" name="Service">
+              {% for item in ServiceItems%}
+              <option value="{{ item.IdService }}">{{ item.Name }}</option>
+              {% endfor %}
+            </select>
           </div>
           <div class="form-group">
             <label for="inputAddress2">Availability Date : </label>
