--- a/dashboard/templates/agent.html
+++ b/dashboard/templates/agent.html
@@ -17,32 +17,21 @@
               <th>First Name</th>
               <th>Last Name</th>
               <th>Service</th>
-              <!-- <th>Password</th> -->
               <th>Phone Number</th>
-              <!-- <th>Business Name</th> -->
               <th>Address</th>
               <th>Availability time</th>
               <th>Action</th>
             </tr>
           </thead>
-          <!-- <tfoot>
-                        <tr>
-                          <th>Id</th>
-                          <th>Name</th>
-                          <th>Status</th>
-                          <th>Action</th>
-                        </tr>
-                      </tfoot> -->
+
           <tbody>
             {% for item in AgentItems %}
             <tr>
               <td>{{ item.IdAgent }}</td>
               <td>{{ item.FirstName }}</td>
               <td>{{ item.LastName }}</td>
-              <td>{{ item.Email }}</td>
-              <!-- <td>ahmed@12345</td> -->
+              <td>{{ item.service.Name }}</td>
               <td>{{ item.PhoneNumber }}</td>
-              <td>{{ item.BusinesName }}</td>
               <td>{{ item.Address }}</td>
               <td>{{ item.CreatedAt }}</td>
               <td>
@@ -70,29 +59,34 @@
                       <div class="form-row">
                         <div class="form-group col-md-6">
                           <label for="inputEmail4">First name :</label>
-                          <input type="text" class="form-control" id="inputEmail4" placeholder="{{ item.FirstName }}" name="FirstName">
+                          <input type="text" class="form-control" id="inputEmail4" placeholder="{{ item.FirstName }}"
+                            name="FirstName">
                         </div>
                         <div class="form-group col-md-6">
                           <label for="inputPassword4">Last name :</label>
-                          <input type="text" class="form-control" id="inputPassword4" placeholder="{{ item.LastName }}" name="LastName">
+                          <input type="text" class="form-control" id="inputPassword4" placeholder="{{ item.LastName }}"
+                            name="LastName">
                         </div>
                       </div>
                       <div class="form-group">
                         <label for="inputAddress">Email :</label>
-                        <input type="email" class="form-control" id="inputAddress" placeholder="{{ item.Email }}" name="Email">
+                        <input type="email" class="form-control" id="inputAddress" placeholder="{{ item.Email }}"
+                          name="Email">
                       </div>
                       <div class="form-group">
                         <label for="inputAddress2">Phone number :</label>
-                        <input type="text" class="form-control" id="inputAddress2" placeholder="{{ item.PhoneNumber }}" name="PhoneNumber">
+                        <input type="text" class="form-control" id="inputAddress2" placeholder="{{ item.PhoneNumber }}"
+                          name="PhoneNumber">
                       </div>
                       <div class="form-group">
                         <label for="inputAddress2">Business name :</label>
-                        <input type="text" class="form-control" id="inputAddress2" placeholder="{{ item.BusinesName }}" name="BusinesName">
+                        <input type="text" class="form-control" id="inputAddress2" placeholder="{{ item.BusinesName }}"
+                          name="BusinesName">
                       </div>
                       <div class="form-group">
                         <label for="inputAddress2">Address </label>
-                        <input type="text" class="form-control" id="inputAddress2"
-                          placeholder="{{ item.Address }}" name="Address">
+                        <input type="text" class="form-control" id="inputAddress2" placeholder="{{ item.Address }}"
+                          name="Address">
                       </div>
                   </div>
                   <div class="modal-footer">
@@ -158,8 +152,8 @@
               <input type="text" class="form-control" id="inputEmail4" placeholder="First name" name="FirstName">
             </div>
             <div class="form-group col-md-6">
-              <label for="inputPassword4">Last name :</label>
-              <input type="text" class="form-control" id="inputPassword4" placeholder="Last name" name="LastName">
+              <label for="inputEmail4">Last name :</label>
+              <input type="text" class="form-control" id="inputEmail4" placeholder="Last name" name="LastName">
             </div>
           </div>
           <div class="form-group">
@@ -172,7 +166,8 @@
           </div>
           <div class="form-group">
             <label for="inputAddress2">Address :</label>
-            <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor" name="BusinesName">
+            <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor"
+              name="Address">
           </div>
           <div class="form-group">
             <label for="inputAddress">Service :</label>
@@ -185,6 +180,15 @@
           <div class="form-group">
             <label for="inputAddress2">Availability Date : </label>
             <input type="date" class="form-control" id="inputAddress2" name="Ordertime">
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">Choose status :</label>
+            <select id="inputState" class="form-control" name="Status">
+              <option selected>Choose...</option>
+              {% for item in SituationItems %}
+              <option value="{{ item.IdSituation }}">{{ item.Situation }}</option>
+              {% endfor %}
+            </select>
           </div>
       </div>
       <div class="modal-footer">
