--- a/dashboard/templates/agent.html
+++ b/dashboard/templates/agent.html
@@ -61,34 +61,50 @@
                       <div class="form-row">
                         <div class="form-group col-md-6">
                           <label for="inputEmail4">First name :</label>
-                          <input type="text" class="form-control" id="inputEmail4" placeholder="{{ item.FirstName }}"
-                            name="FirstName">
+                          <input type="text" class="form-control" id="inputEmail4" value="{{ item.FirstName }}" name="FirstName">
                         </div>
                         <div class="form-group col-md-6">
-                          <label for="inputPassword4">Last name :</label>
-                          <input type="text" class="form-control" id="inputPassword4" placeholder="{{ item.LastName }}"
-                            name="LastName">
+                          <label for="inputEmail4">Last name :</label>
+                          <input type="text" class="form-control" id="inputEmail4" value="{{ item.LastName }}" name="LastName">
                         </div>
                       </div>
                       <div class="form-group">
-                        <label for="inputAddress">Email :</label>
-                        <input type="email" class="form-control" id="inputAddress" placeholder="{{ item.Email }}"
-                          name="Email">
+                        <label for="inputAddress">Password :</label>
+                        <input type="password" class="form-control" id="inputPassword4" placeholder="Password" name="Password">
                       </div>
                       <div class="form-group">
                         <label for="inputAddress2">Phone number :</label>
-                        <input type="text" class="form-control" id="inputAddress2" placeholder="{{ item.PhoneNumber }}"
-                          name="PhoneNumber">
+                        <input type="text" class="form-control" id="inputAddress2" value="{{ item.PhoneNumber }}" name="PhoneNumber">
                       </div>
                       <div class="form-group">
-                        <label for="inputAddress2">Business name :</label>
-                        <input type="text" class="form-control" id="inputAddress2" placeholder="{{ item.BusinesName }}"
-                          name="BusinesName">
-                      </div>
-                      <div class="form-group">
-                        <label for="inputAddress2">Address </label>
-                        <input type="text" class="form-control" id="inputAddress2" placeholder="{{ item.Address }}"
+                        <label for="inputAddress2">Address :</label>
+                        <input type="text" class="form-control" id="inputAddress2" value="{{ item.Address }}"
                           name="Address">
+                      </div>
+                      <div class="form-group">
+                        <label for="inputAddress">Service :</label>
+                        <select class="form-control" id="exampleFormControlSelect1" name="Service">
+                          {% for item in ServiceItems%}
+                          <option value="{{ item.IdService }}">{{ item.Name }}</option>
+                          {% endfor %}
+                        </select>
+                      </div>
+                      <div class="form-group">
+                        <label for="inputAddress2">Availability Date : </label>
+                        <select class="form-control" id="exampleFormControlSelect1" name="Time">
+                          {% for item in TimeItems %}
+                          <option value="{{ item.IdTime }}">{{ item.TimeDec }}</option>
+                          {% endfor %}
+                        </select>
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleFormControlSelect1">Choose status :</label>
+                        <select id="inputState" class="form-control" name="Status">
+                          <option selected>Choose...</option>
+                          {% for item in SituationItems %}
+                          <option value="{{ item.IdSituation }}">{{ item.Situation }}</option>
+                          {% endfor %}
+                        </select>
                       </div>
                   </div>
                   <div class="modal-footer">
