add agent login

--- a/dashboard/templates/agent.html
+++ b/dashboard/templates/agent.html
@@ -70,7 +70,7 @@
                       </div>
                       <div class="form-group">
                         <label for="inputAddress">Password :</label>
-                        <input type="password" class="form-control" id="inputPassword4" placeholder="Password" name="Password">
+                        <input type="password" class="form-control" id="inputPassword4" placeholder="Enter New Password" name="Password">
                       </div>
                       <div class="form-group">
                         <label for="inputAddress2">Phone number :</label>
