--- a/dashboard/templates/login_agent.html
+++ b/dashboard/templates/login_agent.html
@@ -18,7 +18,7 @@
                   </div>
                   <form class="user" action="{{ url_for('main.login')}}" method="POST">
                     <div class="form-group">
-                      <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address..." name="Email">
+                      <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Phone Number..." name="PhoneNumber">
                     </div>
                     <div class="form-group">
                       <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password" name="Pasword">
