--- a/dashboard/templates/agent.html
+++ b/dashboard/templates/agent.html
@@ -76,6 +76,16 @@
                         <label for="inputAddress2">Phone number :</label>
                         <input type="text" class="form-control" id="inputAddress2" value="{{ item.PhoneNumber }}" name="PhoneNumber">
                       </div>
+                      <div class="form-row">
+                        <div class="form-group col-md-6">
+                          <label for="inputEmail4">Latitude :</label>
+                          <input type="text" class="form-control" id="inputEmail4" value="{{ item.Lat }}" name="lat">
+                        </div>
+                        <div class="form-group col-md-6">
+                          <label for="inputEmail4">Longitude :</label>
+                          <input type="text" class="form-control" id="inputEmail4" value="{{ item.Lon }}" name="lon">
+                        </div>
+                      </div>
                       <div class="form-group">
                         <label for="inputAddress2">Address :</label>
                         <input type="text" class="form-control" id="inputAddress2" value="{{ item.Address }}"
@@ -181,6 +191,16 @@
           <div class="form-group">
             <label for="inputAddress2">Phone number :</label>
             <input type="text" class="form-control" id="inputAddress2" placeholder="Phone number" name="PhoneNumber">
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="inputEmail4">Latitude :</label>
+              <input type="text" class="form-control" id="inputEmail4"  name="lat">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="inputEmail4">Longitude :</label>
+              <input type="text" class="form-control" id="inputEmail4" name="lon">
+            </div>
           </div>
           <div class="form-group">
             <label for="inputAddress2">Address :</label>
