--- a/dashboard/templates/orders.html
+++ b/dashboard/templates/orders.html
@@ -20,6 +20,7 @@
               <th>Selected Date</th>
               <th>Price</th>
               <th>Status</th>
+              <th>Agent</th>
               <th>OrderdAt</th>
               <th>Action</th>
             </tr>
@@ -36,6 +37,11 @@
               <td>{{ item.Ordertime }}</td>
               <td>{{ item.Price }} SDG</td>
               <td>{{ item.status.OrderStatus }}</td>
+              {% if item.IdAgent == 0 %}
+              <td>No Agent Assigned </td>
+              {% else %}
+              <td>{{ item.agent.FirstName }} {{ item.agent.LastName }} </td>
+              {% endif %}
               <td>{{ item.CreatedAt }}</td>
               <td>
                 <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
