--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -70,7 +70,7 @@
 
 
     <!-- Earnings (Monthly) Card Example -->
-    <div class="col-xl-3 col-md-6 mb-4">
+    <!-- <div class="col-xl-3 col-md-6 mb-4">
       <div class="card border-left-danger shadow h-100 py-2">
         <div class="card-body">
           <div class="row no-gutters align-items-center">
@@ -84,15 +84,15 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Earnings (Monthly) Card Example -->
     <div class="col-xl-3 col-md-6 mb-4">
-      <div class="card border-left-success shadow h-100 py-2">
+      <div class="card border-left-danger shadow h-100 py-2">
         <div class="card-body">
           <div class="row no-gutters align-items-center">
             <div class="col mr-2">
-              <div class="text-xs font-weight-bold text-success text-uppercase mb-1">#of Users</div>
+              <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">#of Users</div>
               <div class="h5 mb-0 font-weight-bold text-gray-800">{{ UsersNumbers }}</div>
             </div>
             <div class="col-auto">
@@ -106,11 +106,11 @@
 
         <!-- Earnings (Monthly) Card Example -->
         <div class="col-xl-3 col-md-6 mb-4">
-          <div class="card border-left-primary shadow h-100 py-2">
+          <div class="card border-left-success shadow h-100 py-2">
             <div class="card-body">
               <div class="row no-gutters align-items-center">
                 <div class="col mr-2">
-                  <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">#of Services</div>
+                  <div class="text-xs font-weight-bold text-success text-uppercase mb-1">#of Services</div>
                   <div class="h5 mb-0 font-weight-bold text-gray-800">{{ ServiceNumbers }}</div>
                 </div>
                 <div class="col-auto">
