--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -67,12 +67,6 @@
           <span>Agents</span></a>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link" href="{{url_for('farmer.get_farmer')}}">
-          <i class="fas fa-fw fa-comments"></i>
-          <span>Customers</span></a>
-      </li>
-
       <!-- Divider -->
       <hr class="sidebar-divider">
 
@@ -81,18 +75,22 @@
         Setting
       </div>
 
-
-
       <li class="nav-item">
         <a class="nav-link" href="{{url_for('services.get_service')}}">
           <i class="fas fa-fw fa-cogs"></i>
-          <span>Services</span></a>
+          <span>Maintenance Services</span></a>
       </li>
 
       <li class="nav-item">
         <a class="nav-link" href="{{url_for('extraservices.get_extraservices')}}">
           <i class="fa fa-plus-square"></i>
-          <span>Extra Services</span></a>
+          <span>Extra Cleaning Services</span></a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="{{url_for('cleaningprice.get_cleaningprice')}}">
+          <i class="fa fa-plus-square"></i>
+          <span>Cleaning Services Prices</span></a>
       </li>
 
       <li class="nav-item">
