--- a/dashboard/templates/cleaningprice.html
+++ b/dashboard/templates/cleaningprice.html
@@ -33,25 +33,25 @@
                     </tr>
                   </tfoot> -->
           <tbody>
-            {% for item in ServiceItems %}
+            {% for item in CleaningPriceItems %}
             <tr>
-              <td>{{ item.IdService }}</td>
+              <td>{{ item.IdPrice }}</td>
               <td>{{ item.Name }}</td>
               <td>{{ item.Price }} SDG</td>
               <td>{{ item.situation.Situation }}</td>
               <td>{{ item.CreatedAt }}</td>
               <td>
                 <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
-                  data-target="#editModal{{ item.IdService }}"><i class="fas fa-edit fa-sm text-white-50"></i>
+                  data-target="#editModal{{ item.IdPrice }}"><i class="fas fa-edit fa-sm text-white-50"></i>
                   Edit </a>
                 <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
-                  data-target="#deleteModal{{ item.IdService }}"><i class="fas fa-trash-alt fa-sm text-white-50"></i>
+                  data-target="#deleteModal{{ item.IdPrice }}"><i class="fas fa-trash-alt fa-sm text-white-50"></i>
                   Delete </a>
               </td>
             </tr>
 
             <!-- edit Modal-->
-            <div class="modal fade" id="editModal{{ item.IdService }}" tabindex="-1" role="dialog"
+            <div class="modal fade" id="editModal{{ item.IdPrice }}" tabindex="-1" role="dialog"
               aria-labelledby="exampleModalLabel" aria-hidden="true">
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -62,7 +62,7 @@
                     </button>
                   </div>
                   <div class="modal-body">
-                    <form action="{{url_for('services.edit_service', IdService = item.IdService )}}" method="POST">
+                    <form action="{{url_for('cleaningprice.edit_cleaningprice', IdPrice = item.IdPrice )}}" method="POST">
                       <div class="form-row">
                         <div class="form-group col-md-12">
                           <label for="exampleFormControlSelect1">Insert services :</label>
@@ -98,7 +98,7 @@
 
 
             <!-- delete Modal-->
-            <div class="modal fade" id="deleteModal{{ item.IdService }}" tabindex="-1" role="dialog"
+            <div class="modal fade" id="deleteModal{{ item.IdPrice }}" tabindex="-1" role="dialog"
               aria-labelledby="exampleModalLabel" aria-hidden="true">
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -111,7 +111,7 @@
                   <div class="modal-body">Are you sure you want to delete {{ item.Name }} ?</div>
                   <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="{{url_for('services.delete_service', IdService = item.IdService)}}">Delete</a>
+                    <a class="btn btn-primary" href="{{url_for('cleaningprice.delete_cleaningprice', IdPrice = item.IdPrice)}}">Delete</a>
                   </div>
                 </div>
               </div>
@@ -146,7 +146,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <form action="{{ url_for('services.add_service')}}" method="POST">
+        <form action="{{ url_for('cleaningprice.add_cleaningprice')}}" method="POST">
           <div class="form-row">
             <div class="form-group col-md-12">
               <label for="exampleFormControlSelect1">Insert Services :</label>
