--- a/dashboard/templates/cleaningprice.html
+++ b/dashboard/templates/cleaningprice.html
@@ -56,7 +56,7 @@
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Edit Maintenance services</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Edit Cleaning Services Price</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">×</span>
                     </button>
@@ -65,7 +65,7 @@
                     <form action="{{url_for('cleaningprice.edit_cleaningprice', IdPrice = item.IdPrice )}}" method="POST">
                       <div class="form-row">
                         <div class="form-group col-md-12">
-                          <label for="exampleFormControlSelect1">Insert services :</label>
+                          <label for="exampleFormControlSelect1">Insert Cleaning Services :</label>
                           <input type="text" class="form-control" value="{{ item.Name }}" name="ServiceName">
                         </div>
                       </div>
@@ -103,7 +103,7 @@
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Delete Maintenance Services</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Delete Cleaning Services Price</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">×</span>
                     </button>
@@ -140,7 +140,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Insert Maintenance Services</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Insert Cleaning Services Price</h5>
         <button class="close" type="button" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
@@ -149,13 +149,13 @@
         <form action="{{ url_for('cleaningprice.add_cleaningprice')}}" method="POST">
           <div class="form-row">
             <div class="form-group col-md-12">
-              <label for="exampleFormControlSelect1">Insert Services :</label>
-              <input type="text" class="form-control" placeholder="Service name" name="ServiceName">
+              <label for="exampleFormControlSelect1">Insert Cleaning Services :</label>
+              <input type="text" class="form-control" placeholder="Cleaning Services" name="ServiceName">
             </div>
           </div>
           <div class="form-row">
             <div class="form-group col-md-12">
-              <label for="exampleFormControlSelect1">Insert Price :</label>
+              <label for="exampleFormControlSelect1">Insert Cleaning Services Price :</label>
               <input type="number" class="form-control" placeholder="Insert Price" name="Price">
             </div>
           </div>
